# webfaulon

./: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  BACKEND-INTEGRATION-SUMMARY.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: sa_configure.py  sa_control.py  sa_status.py  sa_stream.py
backend/app/core/: __init__.py  cooling.py  displacement.py  formula_parser.py  initial_structure.py  molecule.py  random.py  sa_engine.py  wiener.py
backend/app/core/scoring/: __init__.py  logp.py  protocol.py  registry.py  wiener.py
backend/app/models/: errors.py  sa_params.py
backend/app/services/: session_manager.py  svg_renderer.py
backend/app/utils/: rdkit_helpers.py
backend/tests/: __init__.py  conftest.py  test_api_sa.py  test_api_stream.py  test_app.py  test_cooling.py  test_displacement.py  test_formula_parser.py  test_initial_structure.py  test_molecule.py  test_random.py  test_sa_engine.py  test_scoring_components.py  test_scoring_integration.py  test_session_manager.py  test_svg_renderer.py  test_wiener.py
src/: main.ts  vite-env.d.ts
src/api/: client.ts  sse.ts  types.ts
src/core/: MolGraph.ts  SAEngine.ts  cooling.ts  types.ts  (+5 more)
(+90 files in other folders)
