[tool.poetry]
name = "webfaulon-backend"
version = "0.1.0"
description = "WebFaulon Backend - Python backend for SA-driven molecular structure generation"
authors = ["WebFaulon Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
